<resources>
    <string name="app_name">Horrorg</string>
    <string name="email">Correo electrónico</string>
    <string name="emaillogin">Ingresa tu correo electrónico</string>
    <string name="inputnombre">Escribe tu nombre completo</string>
    <string name="correoinput">ejemplo@gmail.com</string>
    <string name="password">Contraseña</string>
    <string name="passwordinput">Ingresa tu contraseña</string>
    <string name="passwordconfirm">Confirma tu contraseña</string>
    <string name="PermissionDenied">No tiene permiso</string>


    <string-array name="array_categories">
        <item>Suspenso</item>
        <item>Criminología</item>
        <item>Creepypastas</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>