<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/white"
            tools:srcCompat="@color/white" />

        <ImageButton
            android:id="@+id/ib_profilepic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_register_profilepic"
            app:layout_constraintStart_toEndOf="@+id/iv_register_profilepic"
            app:srcCompat="@drawable/ic_add_photo_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/input_correo"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/correoinput"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#837A7A"
            android:textSize="14dp"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/reggae_one"
            android:text="Correo"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/input_nombrecompleto" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/reggae_one"
            android:text="Nombre Completo"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/iv_register_profilepic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/reggae_one"
            android:text="¡Registro de usuario!"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/iv_register_profilepic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/reggae_one"
            android:text="Fecha de nacimiento"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/input_correo" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:clickable="false"
            android:focusable="false"
            android:text="Ingresa fecha de nacimiento"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/lbl_main_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/reggae_one"
            android:text="Nombre de usuario"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <EditText
            android:id="@+id/input_register_username"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Escribe nombre de usuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#837A7A"
            android:textSize="14dp"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/lbl_main_email"
            app:layout_constraintTop_toBottomOf="@+id/lbl_main_email" />

        <EditText
            android:id="@+id/input_nombrecompleto"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/inputnombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#837A7A"
            android:textSize="14dp"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/lbl_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/reggae_one"
            android:hint="@string/password"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/input_register_username"
            app:layout_constraintTop_toBottomOf="@+id/input_register_username" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/passwordinput"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#837A7A"
            android:textSize="14dp"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/lbl_Password"
            app:layout_constraintTop_toBottomOf="@+id/lbl_Password" />

        <TextView
            android:id="@+id/lbl_Password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/reggae_one"
            android:hint="@string/password"
            android:text="@string/passwordconfirm"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/input_password"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <EditText
            android:id="@+id/input_password2"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/passwordconfirm"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#837A7A"
            android:textSize="14dp"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/lbl_Password2"
            app:layout_constraintTop_toBottomOf="@+id/lbl_Password2" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/reggae_one"
            android:text="Regístrarte"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/input_password2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>